[package]
name = "read-restrict"
description = "Restrict the number of bytes read from a reader"
version = "0.1.1"
authors = ["Thomas Hurst <tom@hur.st>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Freaky/read-restrict"
keywords = ["read", "limit"]
categories = ["rust-patterns"]
readme = "README.md"

[dependencies]
